--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^33.0.0",
+    "expo": "33.0.0",
+    "expo-constants": "~5.0.0",
+    "moment": "^2.24.0",
     "react": "16.8.3",
-    "react-dom": "^16.8.6",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-gesture-handler": "^1.3.0",
+    "react-dom": "16.8.3",
+    "react-native": "0.59.8",
+    "react-native-gesture-handler": "1.2.1",
+    "react-native-pure-chart": "0.0.24",
+    "react-native-responsive-linechart": "^2.0.1",
+    "react-native-sparkline": "^1.0.5-beta",
+    "react-native-svg": "9.4.0",
     "react-native-swiper": "^1.5.14",
-    "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.0"
+    "react-native-web": "^0.11.5",
+    "react-navigation": "^3.11.1"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "babel-preset-expo": "^5.2.0"
   },
   "private": true
 }
